# AI-Agent-Finance

creditnote-doctor/: Makefile  README.md  pyproject.toml  requirements.txt
creditnote-doctor/app/: streamlit_app.py
creditnote-doctor/app/pages/: 1_🏠_Dashboard.py  2_📥_Upload_Data.py  3_🔍_Root_Cause_Analysis.py  4_📊_KPI_Explorer.py  5_📝_Weekly_Report.py  6_📚_Policies_RAG.py  7_⚙️_Settings.py
creditnote-doctor/config/: config.yaml  logging.yaml
creditnote-doctor/config/prompts/: cause_classification.md  management_summary.md  remediation_suggestions.md
creditnote-doctor/docker/: Dockerfile  docker-compose.yml
creditnote-doctor/docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATA_DICTIONARY.md  DEPLOYMENT.md  FAQ.md  PRIVACY.md  ROADMAP.md  SECURITY.md  STYLEGUIDE.md
creditnote-doctor/sample_data/: credit_notes.csv  customers.csv  invoices.csv  orders.csv  products.csv
creditnote-doctor/sample_data/policies/: order_entry_work_instructions.md  pricing_policy.md  return_policy.md  sla_delivery.md
creditnote-doctor/scripts/: build_index.py  export_kpis.py  run_weekly_report.py  seed_sample_data.py
creditnote-doctor/src/: config.py
creditnote-doctor/src/agent/: agent.py  dataspecs.py  workflows.py
creditnote-doctor/src/analysis/: clustering.py  explain.py  features.py  kpi.py  matching.py  rules.py  scoring.py
creditnote-doctor/src/cli/: main.py
creditnote-doctor/src/data/: joiners.py  loaders.py  mappers.py  preprocess.py  schema.py  validators.py
creditnote-doctor/tests/: test_clustering.py  test_kpi.py  test_loaders.py  test_rules.py
(+20 files in other folders)
