
[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "creditnote-doctor"
version = "0.1.0"
description = "AI agent die creditnota's analyseert en procesfouten blootlegt"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
    "PyYAML>=6.0.1",
    "jinja2>=3.1.4",
    "matplotlib>=3.8.4",
    "python-dotenv>=1.0.1",
    "regex>=2024.4.16",
    "tabulate>=0.9.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
